css/foundation.css
@font-face {
	font-family: "RobotoCondensed";
	src: url("../fonts/RobotoCondensed.ttf") format("truetype");
}

@font-face {
	font-family: "RobotoRegular";
	src: url("../fonts/Roboto-Regular.ttf") format("truetype");
}

@font-face {
	font-family: "RobotoBold";
	src: url("../fonts/Roboto-Bold.ttf") format("truetype");
}


:root {
	/* --white: #d6d6d6; */
	--white: #cacaca;

	/* --light-gray: #c4c3c2; */
	/* --light-gray: #adadad; */
	--light-gray: #b1b1b1;

	--medium-gray: rgb(132, 132, 132);
	--dark-gray: rgb(62, 62, 62);
}

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

.safari h1,
.safari h2,
.safari h3,
.safari h4,
.safari h5,
.safari h6 {
	font-weight: 550;
}

.safari strong {
	font-weight: 550;
}

.safari th {
	font-weight: 550;
}

.disabled {
	opacity: .5;
	text-decoration: line-through;
	user-select: none;
	pointer-events: none;
}


html,
body {
	/* background: #333333; */
	/* background: var(--blue); */
	/* background: -moz-linear-gradient(2deg, rgba(0, 0, 0, 1) 0%, rgba(20, 20, 20, 1) 35%, rgba(0, 0, 0, 1) 100%); */
	/* background: -webkit-linear-gradient(2deg, rgba(0, 0, 0, 1) 0%, rgba(20, 20, 20, 1) 35%, rgba(0, 0, 0, 1) 100%); */
	/* background: linear-gradient(2deg, rgba(0, 0, 0, 1) 0%, rgba(20, 20, 20, 1) 35%, rgba(0, 0, 0, 1) 100%); */
	/* filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000", endColorstr="#000000", GradientType=1); */
	color: var(--white);
	height: fit-content;
	width: 100%;
	font-family: "RobotoRegular", sans-serif;
	scroll-behavior: smooth;
	background: black;
}

/* button.tag to reduce collision
with html Prism highlighting */
button.tag {
	padding: .3em .5em;
	font-size: .7em;
	border-radius: 5%;
	border: .1em solid var(--dark-gray);
	border-radius: .2em;
	color: var(--white);
	background: none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	font-family: "RobotoCondensed", Arial !important;
	/* if on safari change to 500 */
	/* font-weight: 500; */
}

p {
	letter-spacing: .03em;
}

strong {
	font-family: "RobotoBold", "RobotoRegular", sans-serif;
}

a {
	color: var(--white);
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}


pre[class*="language-"] {
	border: .2em solid var(--dark-gray);
	border-radius: .2em;
	/* padding: 1em 0; */
}

[class*="language-"]:first-child {
	font-size: .8em;
}

.clickable {
	color: var(--medium-gray);
	user-select: none;
	-moz-user-select: none;
	-webkit-user-select: none;
}

.clickable:hover {
	cursor: default;
	text-decoration: underline;
	color: var(--white);
}

a.clickable:hover {
	/* only links should have pointer */
	cursor: pointer;
}

.flex {
	display: flex;
}

.align-items-center {
	align-items: center;
}

/* ul > ul > ul label {
	opacity: .9;
} */

#container {
	width: 50%;
	height: 100%;
	margin: 0 auto;
}

#main-navigation {
	height: 10vh;
	width: 100%;
	/* padding: 2em 0; */
	display: flex;
	align-items: center;
	justify-content: space-between;
	border-bottom: .1em solid var(--dark-gray);
}

#main-navigation h1 {
	position: relative;
}
#main-navigation h1 a {
	color: var(--white);
}
#counter-day {
	font-size: .6em;
	color: var(--medium-gray);
}

#main-navigation-links {
	display: flex;

}

#main-navigation-links li {
	list-style-type: none;
	padding-right: 1em;
}

.selected-link {
	color: var(--white);
	text-decoration: underline;
	/* font-style: italic; */
}

#main-navigation-links li:last-child {
	padding-right: 0;
}

#header-logo small {
	color: var(--light-gray);
}


#content {
	/* overflow: hidden; */
	min-height: 60vh;
	height: 100%;
	padding: 2em 0;
}

/* #content a {
	color: var(--light-gray);
} */

#content a:hover {
	color: var(--white);
}

#content ul {
	/* margin-left: 1em; */
}

#content li {
	/* indented look */
	/* margin-left: 3em; */
}


#main-footer {
	position: relative;
	display: flex;
	align-items: center;
	justify-content: space-between;
	padding: 2em 0 10em 0;

	border-top: .1em solid var(--dark-gray);
	color: var(--light-gray);
}

#main-footer-about {
	width: 50%;
}


.unselected-main-navigation-link {
	color: var(--light-gray);
}

@media screen and (max-width: 1700px) {
	#container {
		width: 55%;
	}
}

@media screen and (max-width: 1450px) {
	#container {
		width: 55%;
	}
}

@media screen and (max-width: 1350px) {
	#container {
		width: 70%;
	}
}

@media screen and (max-width: 1100px) {
	#header-logo {
		font-size: .9em;
	}

	#container {
		width: 100%;
	}
	#main-navigation {
		padding: 0 2em;
	}
	#main-footer {
		padding: 2em;
	}
	#content {
		padding: 2em;
	}
}


#hamburger {
	height: 2.5em;
	filter: invert(.5);
	display: none;
}
#hamburger.hamburger-selected {
	filter: unset;
}
#main-navigation-menu {
	display: flex;
	flex-direction: column;
	align-items: end;
}
#hamburger.hamburger-selected + #main-navigation-links {
	display: flex;
	gap: 1em;
}
@media screen and (max-width: 650px) {
	#main-footer {
		flex-direction: column;
		align-items: start;
	}
	#main-footer-about {
		width: 100%;
		margin-bottom: 1em;
	}
}
@media screen and (max-width: 560px) {

	#hamburger {
		display: block;
	}
	#main-navigation {

		height: unset;
		padding: 2em !important;
		align-items: start;
	}
	#main-navigation-links {
		margin-top: 2em;
		display: none;
		flex-direction: column;
		text-align: right;

	}
	#main-navigation-links li {
		padding-right: 0;
	}

	.post {
		margin-right: 0 !important;
		margin-left: 0 !important;
	}
}

